syntax = "proto3";

package bright.contract;

option go_package = "yun.tea/block/bright/proto/bright/proto/contract";
import "bright/bright.proto";
import "bright/basetype/basetype.proto";
import "google/api/annotations.proto";

service Manager {
  rpc GetContractCode(GetContractCodeRequest) returns (GetContractCodeResponse) {
    option (google.api.http) = {
      post:"/get/contract/code"
      body:"*"
    };
  }

  rpc CompileContractCode(CompileContractCodeRequest) returns (CompileContractCodeResponse) {
    option (google.api.http) = {
      post:"/compile/contract/code"
      body:"*"
    };
  }

  rpc CreateContractWithAccount(CreateContractWithAccountRequest) returns (CreateContractWithAccountResponse) {
    option (google.api.http) = {
      post:"/create/contract/with/account"
      body:"*"
    };
  }
  rpc GetContract(GetContractRequest) returns (GetContractResponse) {
    option (google.api.http) = {
      post:"/get/contract"
      body:"*"
    };
  }
  rpc DeleteContract(DeleteContractRequest) returns (DeleteContractResponse) {
    option (google.api.http) = {
      post:"/delete/contract"
      body:"*"
    };
  }
}

message ContractCode {
  string Data = 10;
  string AimContractName = 20;
  string Pkg = 30;
  string Remark = 40;
}

message GetContractCodeRequest { }
message GetContractCodeResponse { ContractCode Info = 10; }

message ContractGEN {
  string ABI = 10;
  string BIN = 20;
  string API = 30;
}

message CompileContractCodeRequest {
  string Code = 10;
  string Pkg = 20;
  string AimContractName = 30;
}

message CompileContractCodeResponse { ContractGEN Info = 10; }

message ContractReq {
  optional string ID = 10;
  optional string Name = 11;
  optional string Address = 20;
  optional string Version = 30;
  optional string Remark = 40;
}

message Contract {
  string ID = 10;
  string Name = 11;
  string Address = 20;
  string Version = 30;
  string Remark = 40;
  uint64 CreatedAt = 60;
  uint64 UpdatedAt = 70;
}


message CreateContractWithAccountRequest { 
  string Name = 10;
  string Remark = 20;
  string AccountID = 30;
}

message CreateContractWithAccountResponse { Contract Info = 10; }

message GetContractRequest { }
message GetContractResponse { Contract Info = 10; }

message DeleteContractRequest { string ID = 10; }
message DeleteContractResponse { Contract Info = 10; }
